--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=prueba
 exchangerate.url=https://open.er-api.com/v6/latest/
+server.port=8088
+jwt.secret=aStringyouwanttowritebutit123123needtobelongestpossible
+jwt.expiration=3600000
